Fix style on mobile browser

--- a/colorGame.css
+++ b/colorGame.css
@@ -37,7 +37,7 @@ h1 {
 
 #message {
     display: inline-block;
-    width: 20%;
+    width: 15%;
 }
 
 #stripe {
@@ -59,7 +59,7 @@ button {
     height: 100%;
     font-weight: 700;
     color: steelblue;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
     font-size: inherit;
     transition: all 0.3s;
     -webkit-transition:all 0.3s;
